--- a/css/default.css
+++ b/css/default.css
@@ -1,34 +1,87 @@
+:root {
+  --bg-primary: #282c34;
+  --fg-color: #c0caf5;
+  --nav-color: #4B5263;
+  --link-fg: #58a6ff;
+  --footer-fg: #fff;
+  --border-bg: #c0caf5; 
+}
+
 html {
   font-size: 62.5%;
 }
 
 body {
   font-size: 1.6rem;
-  color: #000;
+  font-family: "Menlo", "Monaco", "Consolas", "Liberation Mono", "Courier New", monospace;
+  color: var(--fg-color);
+  background-color: var(--bg-primary);
+  margin: 0;
+  padding: 0;
+}
+
+a:link {
+  color: var(--link-fg);
+}
+
+a:visited {
+  color: var(--link-fg);
 }
 
 header {
-  border-bottom: 0.2rem solid #000;
+  border-bottom: 0.2rem solid var(--fg-color);
 }
 
-nav {
-  text-align: right;
+.container {
+  font-size: 1.2rem;
+  font-family: "Merriweather Sans", sans-serif;
+  height: 70px;
+  width: 100vw;
+  display: flex;
+  align-items: center;
 }
 
-nav a {
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+}
+
+.logo a {
+  font-weight: bold;
+  color: var(--fg-color);
+  text-decoration: none;
+  font-size: 1.8rem;
+}
+
+.navbar nav {
+  display: flex;
+  align-items: center;
+}
+
+.navbar nav a {
   font-size: 1.8rem;
   font-weight: bold;
-  color: black;
+  color: var(--fg-color);
+  letter-spacing: 3px;
+  margin-left: 32px;
   text-decoration: none;
   text-transform: uppercase;
 }
 
-footer {
-  margin-top: 3rem;
-  padding: 1.2rem 0;
-  border-top: 0.2rem solid #000;
-  font-size: 1.2rem;
-  color: #555;
+article {
+  margin: 2rem auto; 
+  max-width: 60rem;
+  width: 100%;
+  padding: 1rem;
+  text-align: center;  
 }
 
 h1 {
@@ -45,11 +98,17 @@ article .header {
   color: #555;
 }
 
-.logo a {
-  font-weight: bold;
-  color: #000;
-  text-decoration: none;
+footer {
+  margin-top: 3rem;
+  padding: 1.2rem 0;
+  border-top: 0.2rem solid var(--border-bg);
+  font-size: 1.2rem;
+  color: var(--footer-fg);
 }
+
+/* -------------------------- */
+/* Media Queries              */
+/* -------------------------- */
 
 @media (max-width: 319px) {
   body {
@@ -60,27 +119,37 @@ article .header {
   header {
     margin: 4.2rem 0;
   }
+  
+  .navbar {
+    flex-direction: column;
+  }
+  
   nav {
     margin: 0 auto 3rem;
     text-align: center;
   }
+  
   footer {
     text-align: center;
   }
+  
   .logo {
     text-align: center;
     margin: 1rem auto 3rem;
   }
+  
   .logo a {
     font-size: 2.4rem;
   }
+  
   nav a {
     display: block;
     line-height: 1.6;
+    margin: 0;
   }
 }
 
-@media (min-width: 320px) {
+@media (min-width: 320px) and (max-width: 639px) {
   body {
     width: 90%;
     margin: 0;
@@ -89,20 +158,29 @@ article .header {
   header {
     margin: 4.2rem 0;
   }
+  
+  .navbar {
+    flex-direction: column;
+  }
+  
   nav {
     margin: 0 auto 3rem;
     text-align: center;
   }
+  
   footer {
     text-align: center;
   }
+  
   .logo {
     text-align: center;
     margin: 1rem auto 3rem;
   }
+  
   .logo a {
     font-size: 2.4rem;
   }
+  
   nav a {
     display: inline;
     margin: 0 0.6rem;
@@ -115,27 +193,35 @@ article .header {
     margin: 0 auto;
     padding: 0;
   }
+  
   header {
     margin: 0 0 3rem;
     padding: 1.2rem 0;
   }
+  
+  .navbar {
+    flex-direction: row;
+  }
+  
   nav {
     margin: 0;
     text-align: right;
   }
+  
   nav a {
-    margin: 0 0 0 1.2rem;
-    display: inline;
+    margin-left: 1.2rem;
   }
+  
   footer {
     text-align: right;
   }
+  
   .logo {
     margin: 0;
     text-align: left;
   }
+  
   .logo a {
-    float: left;
     font-size: 1.8rem;
   }
 }
