fix: fixing css

--- a/css/default.css
+++ b/css/default.css
@@ -5,12 +5,12 @@
 }
 
 :root {
-  --bg-primary: #282c34;
-  --fg-color: #c0caf5;
+  --bg-primary: #000000;
+  --fg-color: #33ff33;
   --nav-color: #4B5263;
   --link-fg: #58a6ff;
   --footer-fg: #fff;
-  --border-bg: #c0caf5; 
+  --border-bg: #c0caf5;
 }
 
 @font-face {
@@ -29,7 +29,7 @@
 
 html {
   font-size: 62.5%;
-  overflow-x: hidden; 
+  overflow-x: hidden;
 }
 
 body {
@@ -40,12 +40,15 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  max-width: 60rem; 
+  max-width: 60rem;
   margin: 0 auto;
 }
 
 article {
-    text-align: justify;
+  margin: 2rem auto;
+  width: 100%;
+  padding: 1rem;
+  text-align: left;
 }
 
 a:link,
@@ -54,15 +57,14 @@ a:visited {
 }
 
 header {
-  border-bottom: 0.2rem solid var(--fg-color);
   padding: 1.2rem 0;
 }
 
 .container {
   font-size: 1.2rem;
-  font-family: "Merriweather Sans", sans-serif;
+  font-family: "JetBrainsMonoNerdFont-Regular";
   height: 70px;
-  width: 100%; 
+  width: 100%;
   display: flex;
   align-items: center;
   padding: 0 1rem;
@@ -104,13 +106,6 @@ header {
   text-transform: uppercase;
 }
 
-article {
-  margin: 2rem auto;
-  width: 100%;
-  padding: 1rem;
-  text-align: center;
-}
-
 h1 {
   font-size: 2.4rem;
 }
@@ -135,29 +130,21 @@ footer {
   text-align: center;
 }
 
-/* -------------------------- */
-/* Media Queries              */
-/* -------------------------- */
-
 @media (max-width: 639px) {
   .navbar {
     flex-direction: column;
   }
-  
   nav {
     margin: 0 auto 3rem;
     text-align: center;
   }
-  
   .logo {
     margin: 1rem auto 3rem;
     text-align: center;
   }
-  
   .logo a {
     font-size: 2.4rem;
   }
-  
   nav a {
     display: block;
     margin: 0;
@@ -168,25 +155,20 @@ footer {
   .navbar {
     flex-direction: row;
   }
-  
   nav {
     margin: 0;
     text-align: right;
   }
-  
   nav a {
     margin-left: 1.2rem;
   }
-  
   .logo {
     margin: 0;
     text-align: left;
   }
-  
   .logo a {
     font-size: 1.8rem;
   }
-  
   footer {
     text-align: right;
   }
