fix: fixing css

--- a/css/default.css
+++ b/css/default.css
@@ -6,7 +6,7 @@
 
 :root {
   --bg-primary: #000000;
-  --fg-color: #33ff33;
+  --fg-color: #FFFFFFFF;
   --nav-color: #4B5263;
   --link-fg: #58a6ff;
   --footer-fg: #fff;
