fix: fixing fg color

--- a/templates/default.html
+++ b/templates/default.html
@@ -15,7 +15,7 @@
     <header>
       <div class="container">
         <div class="logo">
-          <a href="/">bgcicca</a>
+          <a href="/">>_bgcicca</a>
         </div>
         <div class="navbar">
           <nav>
