--- a/templates/default.html
+++ b/templates/default.html
@@ -35,8 +35,15 @@
     </header>
 
     <main role="main">
-      <h1>$title$</h1>
-      $body$
+      <div class="wrapper">
+        <div class="content">
+          <h1>$title$</h1>
+          $body$
+        </div>
+        <aside class="sidebar">
+          $sidebar$
+        </aside>
+      </div>
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
