--- a/templates/default.html
+++ b/templates/default.html
@@ -40,9 +40,6 @@
           <h1>$title$</h1>
           $body$
         </div>
-        <aside class="sidebar">
-          $sidebar$
-        </aside>
       </div>
     </main>
 
@@ -52,7 +49,7 @@
     </script>
 
     <footer>
-      Copyright © 2025
+      Copyright © 2024 2025
       <a href="https://github.com/bgcicca">Bruno Ciccarino</a>
       All rights reserved
     </footer>
