--- a/templates/default.html
+++ b/templates/default.html
@@ -5,6 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bruno Ciccarino Blog - $title$</title>
+    <link rel="shortcut icon" href="images/icon.svg" type="image/svg">
     <link rel="stylesheet" href="/css/default.css" />
     <link
       rel="stylesheet"
