--- a/templates/default.html
+++ b/templates/default.html
@@ -42,6 +42,9 @@
           <h1>$title$</h1>
           $body$
         </div>
+        <aside class="sidebar">
+          $sidebar$
+        </aside>
       </div>
     </main>
 
